# whats-the-price-for-the-milk

./: .gitignore  LICENSE  README.md  evaluate_price_over_time.ipynb  known_prices.csv  pyproject.toml  setup_environment  tox.ini
.github/workflows/: basic-checks.yaml  check-price.yaml  routine-message.yaml
src/whats_the_price_for_the_milk/: callmebot.py  get_logs.py  main.py  milk_price.py  oil_price.py  techulus.py
